--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="card m-0">
                                         <div class="card-body">
-                                            <h4 class="card-title"><a class="link-dark text-decoration-none" href="#">{property.name}</a></h4>
+                                            <h4 class="card-title"><a class="link-dark text-decoration-none" href="/property/info?id={property.id}">{property.name}</a></h4>
                                             <div class="d-flex"><i class="material-icons pe-2">location_on</i><span>{property.address}</span></div>
                                             <p class="card-text mt-2 pe-4 overflow-auto card-description" style="max-height: 120px">{property.description}</p>
                                         </div>
