--- a/src/main/resources/templates/includes/card-empty.html
+++ b/src/main/resources/templates/includes/card-empty.html
@@ -1,6 +1,6 @@
 <div class="card border rounded-0 card-comming">
     <div class="card textwhite text-white overflow-hidden"><img class="card-img w-100 d-block" src="/assets/img/construction.jpg"></div>
-    <div class="card-body"><a class="card-link stretched-link"></a>
+    <div class="card-body" style="min-height: 200px;"><a class="card-link stretched-link"></a>
         <h4 class="card-title">¡Proximamente!</h4>
     </div>
 </div>
