--- a/src/main/resources/templates/includes/card.html
+++ b/src/main/resources/templates/includes/card.html
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="card-body"><a class="card-link stretched-link" href="/property/info?id={property.id}"></a>
+    <div class="card-body" style="min-height: 200px;"><a class="card-link stretched-link" href="/property/info?id={property.id}"></a>
         <h4 class="card-title"><i class="far fa-window-restore d-flex float-end flex-row-reverse text-primary"></i>{property.name}</h4>
         <p class="card-text mt-2 pe-4 overflow-auto card-description" style="max-height: 120px;">{property.description}</p>
     </div>
