--- a/src/main/resources/templates/includes/footer.html
+++ b/src/main/resources/templates/includes/footer.html
@@ -29,4 +29,4 @@
         </div>
     </div><!-- End: 1 Row 3 Columns -->
 </div>
-<div class="text-center text-white-50 bg-dark p-4"><small>@2021 Copyright:&nbsp;ROMSAL SRL</small></div>
+<div class="text-center text-white-50 bg-dark p-4"><small>©Copyright 2021 - ROMSAL, SRL</small></div>
