--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -76,19 +76,19 @@
                 </div><!-- Start: People -->
                 <div class="row mt-5" data-aos="zoom-in" data-aos-duration="1000">
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Luis%20Alejandro%20Romano.jpg?h=39d2eb8b23f126d2835147d14cf9940c">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/luis_alejandro_romano.jpg">
                             <h3 class="mt-4 fw-bold"><strong>Luis Romano</strong><br></h3><span class="text-uppercase title fw-bold">ENCARGADO DE OBRAS</span>
                             <div class="social my-2"><a class="text-decoration-none" href="mailto:ingluisromano@gmail.com"><i class="material-icons d-block">mail_outline</i>ingluisromano@gmail.com</a></div>
                         </div>
                     </div>
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Maria%20Alejandra.png?h=710b82dd593ed1d12ce7fe9b307a785d">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/maria_alejandra.png">
                             <h3 class="mt-4 fw-bold"><strong>María Romano</strong></h3><span class="text-uppercase title fw-bold">ENCARGADA DE VENTAS</span>
                             <div class="social my-2"><a class="text-decoration-none" href="mailto:maria.romano.salas@gmail.com"><i class="material-icons d-block">mail_outline</i>maria.romano.salas@gmail.com</a></div>
                         </div>
                     </div>
                     <div class="col my-2" data-bss-hover-animate="pulse">
-                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/Xiomara%20Salas.jpg?h=78fffc4adcaa1b6cc69064d8aeeeed05">
+                        <div class="bg-white p-4"><img class="rounded-circle" src="/assets/img/team/xiomara_salas.jpg">
                             <h3 class="mt-4 fw-bold"><strong>Xiomara Salas</strong><br></h3><span class="text-uppercase title fw-bold">GERENTE GENERAL </span>
                             <div class="social my-2"><a class="text-decoration-none" href="mailto:xiomara.salas@gmail.com"><i class="material-icons d-block">mail_outline</i>xiomara.salas@gmail.com</a></div>
                         </div>
