--- a/src/main/resources/templates/common/contact.html
+++ b/src/main/resources/templates/common/contact.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header>{#include includes/navbar/}</header>
+    <header>{#include common/includes/navbar/}</header>
     <main>
         <section class="highlight">
             <div class="container">
@@ -76,7 +76,7 @@
             <div id="map" class="w-100" style="height: 400px;"></div>
         </section>
     </main>
-    <footer>{#include includes/footer/}</footer>
+    <footer>{#include common/includes/footer/}</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
