--- a/src/main/resources/templates/common/error.html
+++ b/src/main/resources/templates/common/error.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <header>{#include includes/navbar/}</header>
+    <header>{#include common/includes/navbar/}</header>
     <main>
         <div class="bg-light">
             <div class="container text-center d-flex align-items-center p-5" style="max-width: 500px;">
@@ -35,7 +35,7 @@
             </div>
         </div>
     </main>
-    <footer>{#include includes/footer/}</footer>
+    <footer>{#include common/includes/footer/}</footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
